src/abc/parser/NoteGrammarParser.java
// Generated from NoteGrammar.g4 by ANTLR 4.5.1

package abc.parser;
// Do not edit this .java file! Edit the .g4 file and re-run Antlr.

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class NoteGrammarParser extends Parser {
  static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache =
    new PredictionContextCache();
  public static final int
    T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
    T__9=10, T__10=11, T__11=12, NUM=13, OPENR=14, CLOSER=15, BAR=16, ENDMAJOR=17, 
    ENDING=18, ANYTHING=19, NEWLINE=20, LETTER=21;
  public static final int
    RULE_duration = 0, RULE_pitch = 1, RULE_rest = 2, RULE_note = 3, RULE_chord = 4, 
    RULE_tuplet = 5, RULE_single = 6, RULE_repeatsec = 7, RULE_section = 8, 
    RULE_voice = 9, RULE_root = 10;
  public static final String[] ruleNames = {
    "duration", "pitch", "rest", "note", "chord", "tuplet", "single", "repeatsec", 
    "section", "voice", "root"
  };

  private static final String[] _LITERAL_NAMES = {
    null, "'/'", "'='", "'_'", "'^'", "','", "'''", "'z'", "'['", "']'", 
    "'('", "'V'", "':'", null, null, null, "'|'"
  };
  private static final String[] _SYMBOLIC_NAMES = {
    null, null, null, null, null, null, null, null, null, null, null, null, 
    null, "NUM", "OPENR", "CLOSER", "BAR", "ENDMAJOR", "ENDING", "ANYTHING", 
    "NEWLINE", "LETTER"
  };
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated
  public static final String[] tokenNames;
  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override

  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() { return "NoteGrammar.g4"; }

  @Override
  public String[] getRuleNames() { return ruleNames; }

  @Override
  public String getSerializedATN() { return _serializedATN; }

  @Override
  public ATN getATN() { return _ATN; }


      // This method makes the parser stop running if it encounters
      // invalid input and throw a RuntimeException.
      public void reportErrorsAsExceptions() {
          // To prevent any reports to standard error, add this line:
          //removeErrorListeners();
          
          addErrorListener(new BaseErrorListener() {
              public void syntaxError(Recognizer<?, ?> recognizer,
                                      Object offendingSymbol, 
                                      int line, int charPositionInLine,
                                      String msg, RecognitionException e) {
                  throw new ParseCancellationException(msg, e);
              }
          });
      }

  public NoteGrammarParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
  }
  public static class DurationContext extends ParserRuleContext {
    public List<TerminalNode> NUM() { return getTokens(NoteGrammarParser.NUM); }
    public TerminalNode NUM(int i) {
      return getToken(NoteGrammarParser.NUM, i);
    }
    public DurationContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_duration; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).enterDuration(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).exitDuration(this);
    }
  }

  public final DurationContext duration() throws RecognitionException {
    DurationContext _localctx = new DurationContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_duration);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(23);
      switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
      case 1:
        {
        setState(22);
        match(NUM);
        }
        break;
      }
      setState(26);
      _la = _input.LA(1);
      if (_la==T__0) {
        {
        setState(25);
        match(T__0);
        }
      }

      setState(29);
      _la = _input.LA(1);
      if (_la==NUM) {
        {
        setState(28);
        match(NUM);
        }
      }

      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class PitchContext extends ParserRuleContext {
    public TerminalNode LETTER() { return getToken(NoteGrammarParser.LETTER, 0); }
    public PitchContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_pitch; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).enterPitch(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).exitPitch(this);
    }
  }

  public final PitchContext pitch() throws RecognitionException {
    PitchContext _localctx = new PitchContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_pitch);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(34);
      _errHandler.sync(this);
      _la = _input.LA(1);
      while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3))) != 0)) {
        {
        {
        setState(31);
        _la = _input.LA(1);
        if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3))) != 0)) ) {
        _errHandler.recoverInline(this);
        } else {
          consume();
        }
        }
        }
        setState(36);
        _errHandler.sync(this);
        _la = _input.LA(1);
      }
      setState(37);
      match(LETTER);
      setState(42);
      _errHandler.sync(this);
      _la = _input.LA(1);
      while (_la==T__4 || _la==T__5) {
        {
        setState(40);
        switch (_input.LA(1)) {
        case T__4:
          {
          setState(38);
          match(T__4);
          }
          break;
        case T__5:
          {
          {
          setState(39);
          match(T__5);
          }
          }
          break;
        default:
          throw new NoViableAltException(this);
        }
        }
        setState(44);
        _errHandler.sync(this);
        _la = _input.LA(1);
      }
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class RestContext extends ParserRuleContext {
    public DurationContext duration() {
      return getRuleContext(DurationContext.class,0);
    }
    public RestContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_rest; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).enterRest(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).exitRest(this);
    }
  }

  public final RestContext rest() throws RecognitionException {
    RestContext _localctx = new RestContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_rest);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(45);
      match(T__6);
      setState(46);
      duration();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class NoteContext extends ParserRuleContext {
    public PitchContext pitch() {
      return getRuleContext(PitchContext.class,0);
    }
    public DurationContext duration() {
      return getRuleContext(DurationContext.class,0);
    }
    public NoteContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_note; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).enterNote(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).exitNote(this);
    }
  }

  public final NoteContext note() throws RecognitionException {
    NoteContext _localctx = new NoteContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_note);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(48);
      pitch();
      setState(49);
      duration();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class ChordContext extends ParserRuleContext {
    public List<NoteContext> note() {
      return getRuleContexts(NoteContext.class);
    }
    public NoteContext note(int i) {
      return getRuleContext(NoteContext.class,i);
    }
    public ChordContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_chord; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).enterChord(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).exitChord(this);
    }
  }

  public final ChordContext chord() throws RecognitionException {
    ChordContext _localctx = new ChordContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_chord);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(51);
      match(T__7);
      setState(53); 
      _errHandler.sync(this);
      _la = _input.LA(1);
      do {
        {
        {
        setState(52);
        note();
        }
        }
        setState(55); 
        _errHandler.sync(this);
        _la = _input.LA(1);
      } while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << LETTER))) != 0) );
      setState(57);
      match(T__8);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class TupletContext extends ParserRuleContext {
    public TerminalNode NUM() { return getToken(NoteGrammarParser.NUM, 0); }
    public List<NoteContext> note() {
      return getRuleContexts(NoteContext.class);
    }
    public NoteContext note(int i) {
      return getRuleContext(NoteContext.class,i);
    }
    public TupletContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_tuplet; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).enterTuplet(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).exitTuplet(this);
    }
  }

  public final TupletContext tuplet() throws RecognitionException {
    TupletContext _localctx = new TupletContext(_ctx, getState());
    enterRule(_localctx, 10, RULE_tuplet);
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      {
      setState(59);
      match(T__9);
      setState(60);
      match(NUM);
      setState(62); 
      _errHandler.sync(this);
      _alt = 1;
      do {
        switch (_alt) {
        case 1:
          {
          {
          setState(61);
          note();
          }
          }
          break;
        default:
          throw new NoViableAltException(this);
        }
        setState(64); 
        _errHandler.sync(this);
        _alt = getInterpreter().adaptivePredict(_input,7,_ctx);
      } while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class SingleContext extends ParserRuleContext {
    public ChordContext chord() {
      return getRuleContext(ChordContext.class,0);
    }
    public NoteContext note() {
      return getRuleContext(NoteContext.class,0);
    }
    public RestContext rest() {
      return getRuleContext(RestContext.class,0);
    }
    public TupletContext tuplet() {
      return getRuleContext(TupletContext.class,0);
    }
    public SingleContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_single; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).enterSingle(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).exitSingle(this);
    }
  }

  public final SingleContext single() throws RecognitionException {
    SingleContext _localctx = new SingleContext(_ctx, getState());
    enterRule(_localctx, 12, RULE_single);
    try {
      setState(70);
      switch (_input.LA(1)) {
      case T__7:
        enterOuterAlt(_localctx, 1);
        {
        setState(66);
        chord();
        }
        break;
      case T__1:
      case T__2:
      case T__3:
      case LETTER:
        enterOuterAlt(_localctx, 2);
        {
        setState(67);
        note();
        }
        break;
      case T__6:
        enterOuterAlt(_localctx, 3);
        {
        setState(68);
        rest();
        }
        break;
      case T__9:
        enterOuterAlt(_localctx, 4);
        {
        setState(69);
        tuplet();
        }
        break;
      default:
        throw new NoViableAltException(this);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class RepeatsecContext extends ParserRuleContext {
    public TerminalNode CLOSER() { return getToken(NoteGrammarParser.CLOSER, 0); }
    public List<SingleContext> single() {
      return getRuleContexts(SingleContext.class);
    }
    public SingleContext single(int i) {
      return getRuleContext(SingleContext.class,i);
    }
    public List<TerminalNode> ENDING() { return getTokens(NoteGrammarParser.ENDING); }
    public TerminalNode ENDING(int i) {
      return getToken(NoteGrammarParser.ENDING, i);
    }
    public TerminalNode OPENR() { return getToken(NoteGrammarParser.OPENR, 0); }
    public TerminalNode ENDMAJOR() { return getToken(NoteGrammarParser.ENDMAJOR, 0); }
    public RepeatsecContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_repeatsec; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).enterRepeatsec(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).exitRepeatsec(this);
    }
  }

  public final RepeatsecContext repeatsec() throws RecognitionException {
    RepeatsecContext _localctx = new RepeatsecContext(_ctx, getState());
    enterRule(_localctx, 14, RULE_repeatsec);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(73);
      _la = _input.LA(1);
      if (_la==OPENR || _la==ENDMAJOR) {
        {
        setState(72);
        _la = _input.LA(1);
        if ( !(_la==OPENR || _la==ENDMAJOR) ) {
        _errHandler.recoverInline(this);
        } else {
          consume();
        }
        }
      }

      setState(77); 
      _errHandler.sync(this);
      _la = _input.LA(1);
      do {
        {
        setState(77);
        switch (_input.LA(1)) {
        case T__1:
        case T__2:
        case T__3:
        case T__6:
        case T__7:
        case T__9:
        case LETTER:
          {
          setState(75);
          single();
          }
          break;
        case ENDING:
          {
          setState(76);
          match(ENDING);
          }
          break;
        default:
          throw new NoViableAltException(this);
        }
        }
        setState(79); 
        _errHandler.sync(this);
        _la = _input.LA(1);
      } while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << ENDING) | (1L << LETTER))) != 0) );
      setState(81);
      match(CLOSER);
      setState(83);
      switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
      case 1:
        {
        setState(82);
        match(ENDING);
        }
        break;
      }
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class SectionContext extends ParserRuleContext {
    public TerminalNode NEWLINE() { return getToken(NoteGrammarParser.NEWLINE, 0); }
    public List<SingleContext> single() {
      return getRuleContexts(SingleContext.class);
    }
    public SingleContext single(int i) {
      return getRuleContext(SingleContext.class,i);
    }
    public List<RepeatsecContext> repeatsec() {
      return getRuleContexts(RepeatsecContext.class);
    }
    public RepeatsecContext repeatsec(int i) {
      return getRuleContext(RepeatsecContext.class,i);
    }
    public SectionContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_section; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).enterSection(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).exitSection(this);
    }
  }

  public final SectionContext section() throws RecognitionException {
    SectionContext _localctx = new SectionContext(_ctx, getState());
    enterRule(_localctx, 16, RULE_section);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(87); 
      _errHandler.sync(this);
      _la = _input.LA(1);
      do {
        {
        setState(87);
        switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
        case 1:
          {
          setState(85);
          single();
          }
          break;
        case 2:
          {
          setState(86);
          repeatsec();
          }
          break;
        }
        }
        setState(89); 
        _errHandler.sync(this);
        _la = _input.LA(1);
      } while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << OPENR) | (1L << ENDMAJOR) | (1L << ENDING) | (1L << LETTER))) != 0) );
      setState(91);
      match(NEWLINE);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class VoiceContext extends ParserRuleContext {
    public TerminalNode ANYTHING() { return getToken(NoteGrammarParser.ANYTHING, 0); }
    public TerminalNode NEWLINE() { return getToken(NoteGrammarParser.NEWLINE, 0); }
    public VoiceContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_voice; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).enterVoice(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).exitVoice(this);
    }
  }

  public final VoiceContext voice() throws RecognitionException {
    VoiceContext _localctx = new VoiceContext(_ctx, getState());
    enterRule(_localctx, 18, RULE_voice);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(93);
      match(T__10);
      setState(94);
      match(T__11);
      setState(95);
      match(ANYTHING);
      setState(96);
      match(NEWLINE);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class RootContext extends ParserRuleContext {
    public TerminalNode EOF() { return getToken(NoteGrammarParser.EOF, 0); }
    public List<SectionContext> section() {
      return getRuleContexts(SectionContext.class);
    }
    public SectionContext section(int i) {
      return getRuleContext(SectionContext.class,i);
    }
    public List<VoiceContext> voice() {
      return getRuleContexts(VoiceContext.class);
    }
    public VoiceContext voice(int i) {
      return getRuleContext(VoiceContext.class,i);
    }
    public RootContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_root; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).enterRoot(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof NoteGrammarListener ) ((NoteGrammarListener)listener).exitRoot(this);
    }
  }

  public final RootContext root() throws RecognitionException {
    RootContext _localctx = new RootContext(_ctx, getState());
    enterRule(_localctx, 20, RULE_root);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(102); 
      _errHandler.sync(this);
      _la = _input.LA(1);
      do {
        {
        {
        setState(99);
        _la = _input.LA(1);
        if (_la==T__10) {
          {
          setState(98);
          voice();
          }
        }

        setState(101);
        section();
        }
        }
        setState(104); 
        _errHandler.sync(this);
        _la = _input.LA(1);
      } while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << T__10) | (1L << OPENR) | (1L << ENDMAJOR) | (1L << ENDING) | (1L << LETTER))) != 0) );
      setState(106);
      match(EOF);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static final ATN _ATN =
    new ATNDeserializer().deserialize(_serializedATN.toCharArray());
  static {
    _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
    for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
      _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
    }
  }
}